--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#">iPhone</a>
                         <a href="#">iPad</a>
                         <a href="#">iWatch</a>
-                        <a href="#">Support and</a>
+                        <a href="#">Support</a>
                     </div>
                 </div>
 
